--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,29 +1,32 @@
 
-name: Android Build (Debug APK) - Extended v2
+name: Android Build (Debug APK)
 
 on:
   push:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
-      - name: Install gradle
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Build Debug APK
-        run: gradle assembleDebug --no-daemon
+        run: ./gradlew app:assembleDebug
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: readerz-extended-v2-debug-apk
+          name: Readerz-Debug
           path: app/build/outputs/apk/debug/app-debug.apk
