--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build Debug APK
         run: ./gradlew app:assembleDebug
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: Readerz-Debug
-          path: app/build/outputs/apk/debug/app-debug.apk
+     - name: Upload APK
+  uses: actions/upload-artifact@v4
+  with:
+    name: Readerz-Debug-APK
+    path: '**/build/outputs/apk/debug/*.apk'
