--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,32 +1,55 @@
 
-name: Android Build (Debug APK)
+name: Android Debug Build
 
 on:
   push:
-  workflow_dispatch:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
+    name: Build Debug APK
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      # 1. Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2. Set up Java (JDK 17 recommended for Android 15+)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+      # 3. Grant permission to gradlew (if it exists)
+      - name: Make gradlew executable
+        run: |
+          if [ -f ./gradlew ]; then
+            chmod +x ./gradlew
+          fi
 
+      # 4. Build the Debug APK
       - name: Build Debug APK
-        run: ./gradlew app:assembleDebug
+        run: |
+          if [ -f ./gradlew ]; then
+            ./gradlew assembleDebug
+          else
+            cd */ && ./gradlew assembleDebug
+          fi
 
-     - name: Upload APK
-  uses: actions/upload-artifact@v4
-  with:
-    name: Readerz-Debug-APK
-    path: '**/build/outputs/apk/debug/*.apk'
+      # 5. Upload any found Debug APKs
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: Readerz-Debug-APK
+          path: '**/build/outputs/apk/debug/*.apk'
+
+      # Optional - show build folder for debugging
+      - name: List APK Output Folders
+        run: |
+          find . -type f -name "*.apk"
