--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Readerz-Debug-APK
-          path: '/build/outputs/apk/debug/app-debug.apk'
+          path: '/build/outputs/apk/debug/*.apk'
 
       - name: Show APK paths for debugging
         run: find . -type f -name "*.apk"
